@@ -1,6 +1,7 @@
 from ftw.tagging.behavior import ITagging
 from ftw.tagging.interfaces.tagging import ITaggable
 from plone.dexterity.interfaces import IDexterityContent
+from plone.dexterity.utils import safe_utf8
 from plone.indexer import indexer
 from zope.interface import Interface
 
@@ -13,8 +14,8 @@ def tags(obj):
     if IDexterityContent.providedBy(obj):
         behavior = ITagging(obj, None)
         if behavior:
-            return tuple(behavior.tags)
+            return map(safe_utf8, behavior.tags)
     elif 'tags' in obj.Schema().keys():
-        return obj.Schema()['tags'].get(obj)
+        return map(safe_utf8, obj.Schema()['tags'].get(obj))
 
     return None
